feat:  add auto-click alert